# arcon_taxi

./: .gitignore  Cargo.toml  READMD.md  README.md  create-index-fields.sh  data_url.md  test_data
data/: data_url.md  get-data.sh
macros/: Cargo.toml
macros/src/: lib.rs  proto.rs
src/: agg.rs  data.rs  main.rs  ops.rs  source.rs
visualization/: nyu-geojson.json
