[package]
name = "arcon_taxi"
version = "0.1.0"
authors = ["Max Meldrum <max@meldrum.se>"]
edition = "2018"

[dependencies]
prost = "0.7"
chrono = "0.4"
macros = { path = "./macros" }
elasticsearch = "7.11.0-alpha.1"
tokio = { version = "*", features = ["full"] }
serde = "~1"
serde_json = "~1"

[dependencies.arcon]
git = "https://github.com/cda-group/arcon.git"

